<resources>
    <string name="app_name">Kernel Profiler</string>
    <string name="info_text">
        "To get started, click the \"plus\" button to load a custom kernel profile file."
        "If your device is supported, you can select one of the bundled profiles below instead."
    </string>
    <string name="action_about">About</string>
    <string name="cancelText">Cancel</string>
    <string name="confirmText">OK</string>
    <string name="profileConfirm">Are you sure you want to load this file?</string>
    <string name="permText">Storage Permissions are required. Click OK to reshow permissions dialog.</string>
    <string name="fileSelect">Select a File</string>
    <string name="bootText">Apply profile on boot</string>
    <string name="bootNotiText">Show notification after profile applied on boot</string>
    <string name="profileMenu">Profile loader</string>
    
    <!-- Profiles and Authors -->
    <string name="glassfish">GlassFish 1.2</string>
    <string name="sonicron">Created by soniCron</string>
    <string name="glasscannon">GlassCannon</string>
    <string name="phantom">Created by phantom146</string>
    <string name="ghostpepper">GhostPepper</string>
    <string name="drunksaucelite">DrunkSauce Lite</string>
    <string name="alcolawl">Created by Alcolawl</string>
    <string name="wingoku">Wingoku 4.1</string>
    <string name="fpaste">Created by fpaste</string>
    <string name="maddog">MadDog</string>

    <!-- Shared Preferences -->
    <string name="onBoot">false</string>
    <string name="onBootNoti">true</string>
    <string name="profile"/>
    <string name="profilePath"/>
</resources>
